--- a/blitzide/blitzide.rc
+++ b/blitzide/blitzide.rc
@@ -295,11 +295,11 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION
 CAPTION "About Blitz"
 FONT 10, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "Okee Dokee!",IDOK,79,150,50,14
+    DEFPUSHBUTTON   "Okay then..",IDOK,79,150,50,14
     CONTROL         132,IDC_STATIC,"Static",SS_BITMAP | SS_REALSIZEIMAGE,11,
                     5,64,32
-    CTEXT           "BlitzPlus - Demo Version",IDC_PRODUCT,78,7,139,8
-    CTEXT           "IDE V1.1  Runtime V1.1  Linker V1.1",IDC_VERSION,78,27,
+    CTEXT           "",IDC_PRODUCT,78,7,139,8
+    CTEXT           "",IDC_VERSION,78,27,
                     139,8
     CTEXT           "Copyright Blitz Research Ltd",IDC_STATIC,78,17,139,8
     CONTROL         "Progress1",IDC_PROGRESS1,"msctls_progress32",PBS_SMOOTH | 
